@@ -32,9 +32,6 @@
                 <configuration>
                     <source>9</source>
                     <target>9</target>
-                    <compilerArgs>
-                        <arg>--add-exports=java.base/com.sun.crypto.provider=com.chrosciu.crypto</arg>
-                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
